--- a/src/styles/Initator_Confirmation/Comment.css
+++ b/src/styles/Initator_Confirmation/Comment.css
@@ -18,6 +18,7 @@
   height: 12px;
   display: flex;
   align-items: center;
+  margin-left: -12px;
 }
 
 .comment-input-frame {
@@ -25,7 +26,7 @@
   width: 111%;
   height: 110px;
   background-color: #ffffff;
-  border: 0.5px solid #d0d5dd;
+  border: 2px solid #d0d5dd;
   border-radius: 6px;
   padding: 0;
   position: relative;
